--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,7 +4,7 @@
 
   <h3>
     <a [title]="product.name + ' details'">
-      {{ product.name }}
+      {{ product.name }} 
     </a>
   </h3>
 
@@ -15,6 +15,11 @@
   <button (click)="share()">
     Share
   </button>
+
+  <app-product-alerts
+  [product]="product"
+  (notify)="onNotify()">
+</app-product-alerts>
 
 </div>
 
